style: fix vertical align issue with salah table headers

--- a/src/index.css
+++ b/src/index.css
@@ -223,6 +223,7 @@ td {
 
 .ReactVirtualized__Table__headerColumn {
   margin-right: 0;
+  line-height: 1;
 }
 
 .ReactVirtualized__Table__row {
